@@ -7,6 +7,7 @@ import com.googlecode.lanterna.TerminalPosition;
 import org.junit.jupiter.api.Test;
 import com.jiss.app.input.InsertModeHandler;
 import com.jiss.app.input.LoopStatus;
+import com.jiss.app.input.InputContext;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -24,10 +25,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.Escape);
         TerminalPosition pos = new TerminalPosition(2, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(EditorMode.NORMAL, status.mode());
         assertEquals(pos, status.pos());
@@ -39,9 +41,10 @@ class InsertModeHandlerTest {
         when(key.getCharacter()).thenReturn('x');
         TerminalPosition pos = new TerminalPosition(0, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(EditorMode.INSERT, status.mode());
         assertEquals("[x]", buffer.toString());
@@ -55,12 +58,13 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.Backspace);
         TerminalPosition pos = new TerminalPosition(2, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
-        assertEquals("ac", buffer.get(0));
+        assertEquals("ac", buffer.getFirst());
         assertEquals(EditorMode.INSERT, status.mode());
         assertEquals(new TerminalPosition(1, 0), status.pos());
     }
@@ -71,12 +75,13 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.Backspace);
         TerminalPosition pos = new TerminalPosition(0, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
-        assertEquals("abc", buffer.get(0));
+        assertEquals("abc", buffer.getFirst());
         assertEquals(EditorMode.INSERT, status.mode());
         assertEquals(pos, status.pos());
     }
@@ -88,12 +93,13 @@ class InsertModeHandlerTest {
         when(key.getCharacter()).thenReturn('x');
         TerminalPosition pos = new TerminalPosition(1, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("ab");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
-        assertEquals("axb", buffer.get(0));
+        assertEquals("axb", buffer.getFirst());
         assertEquals(EditorMode.INSERT, status.mode());
         assertEquals(new TerminalPosition(2, 0), status.pos());
     }
@@ -104,10 +110,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.ArrowLeft);
         TerminalPosition pos = new TerminalPosition(2, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(new TerminalPosition(1, 0), status.pos());
         assertEquals(EditorMode.INSERT, status.mode());
@@ -119,10 +126,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.ArrowLeft);
         TerminalPosition pos = new TerminalPosition(0, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(pos, status.pos());
         assertEquals(EditorMode.INSERT, status.mode());
@@ -134,10 +142,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.ArrowRight);
         TerminalPosition pos = new TerminalPosition(1, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(new TerminalPosition(2, 0), status.pos());
         assertEquals(EditorMode.INSERT, status.mode());
@@ -149,10 +158,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.ArrowRight);
         TerminalPosition pos = new TerminalPosition(3, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(pos, status.pos());
         assertEquals(EditorMode.INSERT, status.mode());
@@ -164,13 +174,13 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.Enter);
         TerminalPosition pos = new TerminalPosition(2, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
 
-        // Should insert newline at the start, buffer becomes "\nabc"
         assertEquals(2, buffer.size());
         assertEquals("ab", buffer.get(0));
         assertEquals("c", buffer.get(1));
@@ -185,10 +195,11 @@ class InsertModeHandlerTest {
         when(key.getKeyType()).thenReturn(KeyType.EOF);
         TerminalPosition pos = new TerminalPosition(0, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
         assertEquals(EditorMode.STOPPED, status.mode());
         assertEquals(pos, status.pos());
@@ -201,13 +212,13 @@ class InsertModeHandlerTest {
         // Start at column 0, row 0 (beginning of buffer)
         TerminalPosition pos = new TerminalPosition(0, 0);
         StringBuilder commandBuffer = new StringBuilder();
-        ArrayList<String> buffer = new ArrayList();
+        ArrayList<String> buffer = new ArrayList<>();
         buffer.add("abc");
+        InputContext context = new InputContext(pos, key, commandBuffer, buffer);
 
         InsertModeHandler handler = new InsertModeHandler();
-        LoopStatus status = handler.handleTextInput(pos, key, commandBuffer, buffer);
+        LoopStatus status = handler.handleTextInput(context);
 
-        // Should insert newline at the start, buffer becomes "\nabc"
         assertEquals(2, buffer.size());
         assertEquals("", buffer.get(0));
         assertEquals("abc", buffer.get(1));
